--- a/index.html
+++ b/index.html
@@ -113,6 +113,90 @@
           </div>
         </div>
       </section>
+
+      <!-- ------------Resume Section------------ -->
+      <section>
+        <h1 class="resume-title">A summary of My Resume</h1>
+
+        <div class="resume-container">
+          <div class="resume-column">
+            <h2 class="resume-column-title">My Education</h2>
+            <div class="resume-item">
+              <h3 class="resume-item-title">Master in Computer Engineering</h3>
+              <h4 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-item">
+              <h3 class="resume-item-title">Master in Computer Engineering</h3>
+              <h4 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-item">
+              <h3 class="resume-item-title">Master in Computer Engineering</h3>
+              <h4 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+          </div>
+
+          <div class="resume-column">
+            <h2 class="resume-column-title">My Experience</h2>
+            <div class="resume-item">
+              <h3 class="resume-item-title">Sr. Font End Developer</h3>
+              <h4 class="resume-item-institute">Apple Inc / 2020 - Current</h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-item">
+              <h3 class="resume-item-title">Jr. Font End Developer</h3>
+              <h4 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-item">
+              <h3 class="resume-item-title">HTML Developer</h3>
+              <h4 class="resume-item-institute">Adobe Inc / 2017 - 2018</h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+          </div>
+        </div>
+        <div class="download-cv">
+          <button class="btn-primary">Download CV</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
