--- a/index.html
+++ b/index.html
@@ -198,6 +198,36 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <!-- ----------- Footer Section ------------ -->
+    <footer>
+      <div class="footer-column">
+        <h2 class="footer-column-title">Lets Connect</h2>
+        <p class="footer-column-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="footer-icon">
+          <a href=""><img src="images/icons/facebook.png" alt="" /></a
+          ><a href=""><img src="images/icons/twitter.png" alt="" /></a
+          ><a href=""><img src="images/icons/insta.png" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h2 class="footer-column-title">Let’s Message me</h2>
+        <form class="contact" action="">
+          <input type="text" placeholder="Your Name" name="" value="" />
+          <input type="email" placeholder="Your Email" name="" value="" />
+          <textarea
+            name=""
+            placeholder="Message"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+          <input class="btn-primary" type="submit" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
